force-app/main/default/objects/KLWProdNames__c/KLWProdNames__c.object-meta.xml
<CustomObject>
    <label>KLW Prod Names</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KLW Prod Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>