force-app/main/default/objects/KLWProdNames__c/fields/ID_ERP__c.field-meta.xml
<CustomField>
    <fullName>ID_ERP__c</fullName>
    <externalId>true</externalId>
    <label>ID in ERP</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>