force-app/main/default/objects/KLWProdNames__c/fields/NameUA__c.field-meta.xml
<CustomField>
    <fullName>NameUA__c</fullName>
    <label>Name UA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>