force-app/main/default/objects/KLWProdNames__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ID_ERP__c</columns>
    <columns>NAME</columns>
    <columns>NameUA__c</columns>
    <columns>NameRU__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>